[gd_scene load_steps=10 format=3 uid="uid://by587xtynq2uw"]

[ext_resource type="Script" uid="uid://dork4ufv8xw05" path="res://scripts/projectile/bullet_projectile.gd" id="1_v4hmp"]
[ext_resource type="Texture2D" uid="uid://brcb5ubp0cwdl" path="res://assets/sprites/simple_projectile_concept.png" id="2_pfba5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dnn0w"]
atlas = ExtResource("2_pfba5")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4hmp"]
atlas = ExtResource("2_pfba5")
region = Rect2(8, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfba5"]
atlas = ExtResource("2_pfba5")
region = Rect2(16, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_tclso"]
atlas = ExtResource("2_pfba5")
region = Rect2(24, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_y542r"]
atlas = ExtResource("2_pfba5")
region = Rect2(32, 0, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_puu0l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dnn0w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4hmp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfba5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tclso")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y542r")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_1ydfj"]
radius = 5.0

[node name="BulletProjectile" type="Node2D"]
script = ExtResource("1_v4hmp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
rotation = 0.7853982
sprite_frames = SubResource("SpriteFrames_puu0l")
autoplay = "default"
speed_scale = 2.0

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_1ydfj")

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
